--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="/stylesheets/login.css">
 </head>
 
-<body class="d-flex text-white bg-dark">
+<body class="d-flex text-white" style="background-color: #9DC183;">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+                <nav class="navbar sticky-top navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Wishful Thinking</a>
+                        <a style="color: #3C1518" class="navbar-brand" href="#"><b>Wishful Thinking</b></a>
                     </div>
                 </nav>
                 <div class="main signin">
