--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/stylesheets/search.css">
 </head>
 
-<body class="d-flex flex-column vh-100">
+<body class="d-flex flex-column vh-100" style="background-color: #F9F5F1;">
     <%- include('../partials/navbar')%>
     <main class="container mt-5">
         <%- body %>
