--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,10 @@
 <script src="./js/facebook.js"></script>
 
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+     -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-custom navbar-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/profile">Wishful Thinking</a>
+        <a class="navbar-brand" href="/profile"><b>Wishful Thinking</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,3 +20,15 @@
         </div>
     </div>
 </nav>
+
+<style>
+    .navbar-custom {
+        background-color: #9DC183;
+    }
+    .navbar-custom .navbar-brand, .navbar-custom .navbar-text {
+        color: #3C1518;
+    }
+    .nav-link {
+        color: #495867;
+    }
+</style>
