--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -4,7 +4,7 @@ body {
 }
 
 .main {
-    background-color: #ffffff;
+    background-color: #f9f5f1;
     width: 400px;
     height: 400px;
     margin: 7em auto;
