--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -24,7 +24,7 @@
             <input type="link" class="form-control" id="exampleFormControlInput1" placeholder="Link to item" name="link">
         </div>
         <div class="justify-content-center btn-toolbar mt-5">
-            <a href="/listDetails"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
+            <a href="/listDetails/<%=name%>"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
             <input type="submit" class="btn btn-success btn-sm">
         </div>
     </form>
