--- a/views/addList.ejs
+++ b/views/addList.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
-<div class="container">
+<div class="container" style="background-color: #EDE1D4;">
     <div class="d-flex justify-content-center pb-3">
-        <h1><u>Add List</u></h1>
+        <h1 style="color: #3C1518"><u>Add List</u></h1>
     </div>
     <form method="get" action="/addMyList">
         <div class="form-group">
