--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -3,9 +3,9 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 <!------ Include the above in your HEAD tag ---------->
-	<div class="container">
+	<div class="container" style="background-color: #EDE1D4;">
 		<div class="d-flex justify-content-between">
-			<h2 class="mb-4"><u>Dates</u></h2>
+			<h2 class="mb-4" style="color: #3C1518"><u>Dates</u></h2>
 			<a href="/addDate"><button type="button" class="btn btn-success btn-sm">Add Date</button></a>
 		</div>
 
