--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
-<div class="container">
+<div class="container" style="background-color: #EDE1D4;">
     <div class="d-flex justify-content-center pb-3">
-        <h1><u>Add Item</u></h1>
+        <h1 style="color: #3C1518"><u>Add Item</u></h1>
     </div>
     <form method="GET" action="/addFriendItem/<%=name%>">
         <div class="form-group">
