--- a/views/help.ejs
+++ b/views/help.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate')%>
 
-<div class="container">
+<div class="container" style="background-color: #EDE1D4;">
 <div class="panel-group" id="accordion">
-    <div class="faqHeader">General questions</div>
+    <h2 class="mb-4" style="color: #3C1518""><u>General questions</u></h2>
     <% for (let info of help.helps) { %>
     <div class="panel panel-default pb-3">
         <div class="panel-heading">
