--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="/stylesheets/search.css">
 </head>
 
-<body class="d-flex flex-column vh-100" style="background-color: #F9F5F1;">
+<body class="d-flex flex-column vh-100"  style="background-color: #EDE1D4;">
     <%- include('../partials/navbar')%>
-    <main class="container mt-5">
+    <main class="container mt-5" >
         <%- body %>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
