--- a/views/listDetails.ejs
+++ b/views/listDetails.ejs
@@ -1,7 +1,8 @@
 <% layout('layouts/boilerplate')%>
-<div class="container">
+<div class="container" style="background-color: #EDE1D4;">
+    <img class="mb-3" style="cursor: pointer;" src="https://static.thenounproject.com/png/344330-200.png" alt="" onclick="history.back()" width="50">
     <div class="d-flex justify-content-center pb-3">
-        <h1><u>List Details</u></h1>
+        <h1 style="color: #3C1518"><u>List Details</u></h1>
     </div>
 
     <div>
@@ -22,7 +23,7 @@
     <div>
         <div class="d-flex justify-content-between align-items-end">
             <h4><b>Items:</b></h4>
-            <p class="text"><a href="/addItem/<%=wishlistDetails.name%>">add item</a></p>
+            <p class="text"><a href="/addItem/<%=wishlistDetails.name%>" style="color: #395129; font-weight: bold">add item</a></p>
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
