--- a/views/listItemDetails.ejs
+++ b/views/listItemDetails.ejs
@@ -1,7 +1,8 @@
 <% layout('layouts/boilerplate')%>
-<div class="container">
+<div class="container" style="background-color: #EDE1D4;">
+    <img class="mb-3" style="cursor: pointer;" src="https://static.thenounproject.com/png/344330-200.png" alt="" onclick="history.back()" width="50">
     <div class="d-flex justify-content-center pb-3">
-        <h1><u>Item Details</u></h1>
+        <h1 style="color: #3C1518"><u>Item Details</u></h1>
     </div>
     <div>
         <h4><b>Name: </b></h4>
