--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,17 +1,17 @@
 <% layout('layouts/boilerplate')%>
 <script type="text/javascript" src="data.json"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<div class="container">
+<div class="container" style="background-color: #EDE1D4;">
     <a href="/editProfile" class="d-flex justify-content-end mb-3"><img src="https://i.imgur.com/dZq6GOm.png" alt="" width="40"></a>
     <img class="mx-auto d-block mb-1" src="<%=data.me.profileImage%>" id="photo" alt="profile picture" width="100">
     <div class="text-center mb-4">
-        <p id="name" class="mb-1"><%=data.me.name%></p>
+        <p id="name" class="mb-1" style="color: #9EADC8; font-weight: bold; font-size: 38px; font-family: 'Arial'"><%=data.me.name%></p>
         <p>Birthday: <%=data.me.birthday%></p>
     </div>
     <div class="mb-5">
         <div class="d-flex justify-content-between align-items-end">
-            <p>My Wishlist</p>
-            <p class="text"><a href="/addWishListItem">add item</a></p>
+            <p style="color: #3C1518; font-weight: bold; font-size: 23px">My Wishlist</p>
+            <p class="text"><a href="/addWishListItem" style="color: #395129; font-weight: bold">add item</a></p>
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
@@ -23,8 +23,8 @@
     </div>
     <div>
         <div class="d-flex justify-content-between align-items-end">
-            <p>Wishlist Ideas</p>
-            <p class="text"><a href="/addList">add list</a></p>
+            <p style="color: #3C1518; font-weight: bold; font-size: 23px">Wishlist Ideas</p>
+            <p class="text"><a href="/addList" style="color: #395129; font-weight: bold">add list</a></p>
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
