--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <div class="container" style="background-color: #EDE1D4;">
     <a href="/editProfile" class="d-flex justify-content-end mb-3"><img src="https://i.imgur.com/dZq6GOm.png" alt="" width="40"></a>
-    <img class="mx-auto d-block mb-1" src="<%=data.me.profileImage%>" id="photo" alt="profile picture" width="100">
+    <img class="mx-auto d-block mb-1" src="<%=data.me.profileImage%>" id="photo" alt="profile picture" width="100px" height="100px">
     <div class="text-center mb-4">
         <p id="name" class="mb-1" style="color: #9EADC8; font-weight: bold; font-size: 38px; font-family: 'Arial'"><%=data.me.name%></p>
         <p>Birthday: <%=data.me.birthday%></p>
