--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -13,7 +13,7 @@
     <div style="background-color: white;">
       <% for (let friend of data.friends){%>
           <div class="row">
-            <img class=".img-responsive col-3" width="100px" src='<%=friend.profileImage %>' />
+            <img class=".img-responsive col-3" width="100" src='<%=friend.profileImage %>' />
             <div class="col-9">
               <h3><%= friend.name %></h3>
               <h6>Birthday: <%= friend.birthday %></h6>
