--- a/views/addDate.ejs
+++ b/views/addDate.ejs
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-center pb-3">
         <h1 style="color: #3C1518"><u>Add Date</u></h1>
     </div>
-    <form method="get" action="/addMyDate">
+    <form method="get" action="/addMyDate" autocomplete="off">
         <div class="form-group">
         <label for="exampleFormControlInput1">Name:</label>
         <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name" name="name">
