--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@
                 <div class="main signin">
                   <img style="margin-left: auto; margin-right: auto; display: block" src="https://i.imgur.com/kb3Zb1T.png" width="100px" alt="logo">
                   <p class="sign" align="center" style="padding-top:0">Sign in</p>
-                  <form class="form1" style="padding-top: 0">
+                  <form class="form1" style="padding-top: 0" autocomplete="off">
                     <input class="un " type="text" align="center" placeholder="Username">
                     <input class="pass" type="password" align="center" placeholder="Password">
                     <a class="submit mb-3" align="center" href="/profile">Sign in</a>
