--- a/views/addList.ejs
+++ b/views/addList.ejs
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-center pb-3">
         <h1 style="color: #3C1518"><u>Add List</u></h1>
     </div>
-    <form method="get" action="/addMyList">
+    <form method="get" action="/addMyList" autocomplete="off">
         <div class="form-group">
             <label for="exampleFormControlInput1">Name:</label>
             <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name of person the list is for"  name="name">
