--- a/views/addWishListItem.ejs
+++ b/views/addWishListItem.ejs
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-center pb-3">
         <h1 style="color: #3C1518"><u>Add Item</u></h1>
     </div>
-    <form method="get" action="/addMyItem">
+    <form method="get" action="/addMyItem" autocomplete="off">
         <div class="form-group">
         <label for="exampleFormControlInput1">Name:</label>
         <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Item name" name="name">
